Update 'go-ylkehmyj' component image to: quay.io/rhtap_qe/go-ylkehmyj:ed120370f2d825d08b6fa3d8c6e420f7849e099b@sha256:4ae2d9e9f4bf6341d3acc8240b6ad1451b522ff1ed940e3f87f2a3004b55f2bf

--- a/components/go-ylkehmyj/overlays/development/deployment-patch.yaml
+++ b/components/go-ylkehmyj/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-ylkehmyj
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/go-ylkehmyj:ed120370f2d825d08b6fa3d8c6e420f7849e099b@sha256:4ae2d9e9f4bf6341d3acc8240b6ad1451b522ff1ed940e3f87f2a3004b55f2bf
+          name: container-image
